fix pagination spacing

--- a/components/projects/pagination.module.css
+++ b/components/projects/pagination.module.css
@@ -44,17 +44,22 @@
   .main li {
     font-size: 20px;
   }
+
+  .main div {
+    margin: 0 3px;
+    width: 30px;
+    height: 30px;
+  }
+
   .pilih {
     background-color: #31a5b5;
-    width: 30px;
-    height: 43px;
-    border-radius: 50px;
+    width: 50px;
+    height: 30px;
   }
 
   .main div:hover {
     background-color: #31a5b5;
     width: 30px;
     height: 30px;
-    border-radius: 50px;
   }
 }
